--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,20 @@
 {
   "files": [],
   "references": [
-    { "path": "./tsconfig.app.json"},
-    { "path": "./tsconfig.node.json"}
-  ]
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ],
+  "compilerOptions": {
+    "module": "ESNext",
+    // or "CommonJS"
+    "target": "ESNext",
+    "esModuleInterop": true,
+    // other options
+    "moduleResolution": "NodeNext",
+    "skipLibCheck": true
+  }
 }
