--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "esModuleInterop": true,
     // other options
     "moduleResolution": "NodeNext",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   }
 }
